--- a/app_update.json
+++ b/app_update.json
@@ -2,11 +2,12 @@
   "latest_version_name": "3.5",
   "latest_version_code": 35,
   "min_version_code": 1,
-  "apk_url": "https://github.com/hydra-39/apk/raw/main/my_apk_v3.5.apk",
+  "apk_url": "https://raw.githubusercontent.com/hydra-39/apk/main/my_apk_v3.5.apk",
   "apk_size": 0,
   "apk_sha256": "",
   "notes": "Update aplikasi v3.5"
 }
+
 
 
 
