--- a/app_update.json
+++ b/app_update.json
@@ -1,12 +1,13 @@
 {
-  "latest_version_name": "4.1",
-  "latest_version_code": 41,
+  "latest_version_name": "4.2",
+  "latest_version_code": 42,
   "min_version_code": 1,
   "apk_url": "https://drive.google.com/uc?export=download&id=1pH5wBcVfvRVPUSwgBpb_K1GjYtazAP1z",
   "apk_size": 0,
   "apk_sha256": "",
-  "notes": "Update aplikasi v4.1"
+  "notes": "Update show progress bar\nfor baca scu nmax turbo\ndan scu honda"
 }
+
 
 
 
