--- a/app_update.json
+++ b/app_update.json
@@ -1,12 +1,13 @@
 {
-  "latest_version_name": "4.4",
-  "latest_version_code": 44,
+  "latest_version_name": "4.5",
+  "latest_version_code": 45,
   "min_version_code": 1,
   "apk_url": "https://drive.google.com/uc?export=download&id=1pH5wBcVfvRVPUSwgBpb_K1GjYtazAP1z",
   "apk_size": 0,
   "apk_sha256": "",
-  "notes": "Update Dark Mode & Action Bar\nUpdate Fix Mode Potret\nUpdate Model SCU Honda"
+  "notes": "Update Input Methode Honda Restore"
 }
+
 
 
 
