--- a/app_update.json
+++ b/app_update.json
@@ -1,12 +1,13 @@
 {
-  "latest_version_name": "5.0",
-  "latest_version_code": 50,
+  "latest_version_name": "5.2",
+  "latest_version_code": 52,
   "min_version_code": 1,
   "apk_url": "https://drive.google.com/uc?export=download&id=1pH5wBcVfvRVPUSwgBpb_K1GjYtazAP1z",
   "apk_size": 0,
   "apk_sha256": "",
-  "notes": "UPDATE READ DAN RENEW\n HONDA KLINE"
+  "notes": "UPDATE SCAN HONDA"
 }
+
 
 
 
