--- a/app_update.json
+++ b/app_update.json
@@ -1,12 +1,13 @@
 {
-  "latest_version_name": "5.3",
+  "latest_version_name": "5.4",
   "latest_version_code": 53,
   "min_version_code": 1,
   "apk_url": "https://drive.google.com/uc?export=download&id=1pH5wBcVfvRVPUSwgBpb_K1GjYtazAP1z",
   "apk_size": 0,
   "apk_sha256": "",
-  "notes": "UPDATE SCU HONDA\nKALKULASI TPS"
+  "notes": "UPDATE LIST K2V"
 }
+
 
 
 
